1.2.2:
    Checks & Agents:
    * FIX: apc_symmetra_power: resurrect garble PNP template for 
    * FIX: check_mk_agent.freebsd: remove garble from output
           (Thanks to Mathias Decker)
    * check_http: now support the option -L (urlizing the result)
    
1.2.2b5:
    Core:
    * Checks can now omit the typical "OK - " or "WARN -". This text
      will be added automatically if missing.
    * FIX: livecheck: fixed compilation bug
    * FIX: avoid simultanous activation of changes by means of a lock
    * FIX: check_mk: convert service description unicode into utf-8
    
    Checks & Agents:
    * FIX: jolokia_metrics.mem - now able to handle negative/missing max values
    * ADD: tcp_conn_stats: now additionally uses /proc/net/tcp6
    * ADD: wmic_processs: cpucores now being considered when calculating 
           user/kernel percentages. (thanks to William Baum)
    * FIX: UPS checks support Eaton Evolution
    * FIX: windows agent plugin: mssql now exits after 10 seconds
    
    Notifications:
    * FIX: fixed crash on host notification when contact had explicit services set

    Livestatus:
    * FIX: possible crash with VERY long downtime comments
    * FIX: now able to handle equal comment id of host and service

    WATO:
    * FIX: Fix hiliting of errors in Nagios output
    * FIX: localisation error

    Multisite:
    * FIX: Avoid duplicate "Services" button in host detail views
    * FIX: fix rescheduling icon for services with non-ASCII characters
    * New filter for IP address of a host 
    * Quicksearch: allow searching for complete IP addresses and IP
      address prefixes
    * Add logentry class filter to view 'Host- and Service events'

    BI: 
    * FIX: fix exception with expansion level being 'None'
    * FIX: speedup for single host tables joined by hostname (BI-Boxes)
    * FIX: avoid closing BI subtree while tree is being loaded

    Event Console:
    * FIX: make hostname matching field optional. Otherwise a .* was